deploy/kubernetes/overlays/minikube/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoin-bastion
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: bitcoin-bastion.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitcoin-bastion-api
                port:
                  number: 8000
